--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -18,11 +18,12 @@
     text-align: center;
     width: var(--__panel-heading-height);
     height: var(--__panel-heading-height);
-    margin: calc(-1 * var(--panel-heading-height-padding));
+    margin: calc(-1 * var(--panel-heading-height-padding)) 0;
+    margin-right: -0.5em;
 
     > button {
       box-sizing: border-box;
-      padding: calc(1 * var(--panel-heading-height-padding));
+      padding: calc(1 * var(--panel-heading-height-padding)) 0;
       height: 100%;
       width: 100%;
       text-align: center;
@@ -37,6 +38,7 @@
     align-self: stretch;
     text-align: center;
     width: var(--__panel-heading-height);
+    margin-right: -0.5em;
 
     svg {
       font-size: 1.2em;
